修改一个拼写错误

--- a/framework-mybatis/src/main/resources/system.properties
+++ b/framework-mybatis/src/main/resources/system.properties
@@ -49,7 +49,7 @@ jdbc.validationQuery = select 1 from dual
 #flyway\u7684\u66F4\u65B0\u811A\u672C
 flyway.enable = false
 flyway.sql.dir=classpath:migration/mysql
-mybatis.map,xml.filematch = classpath*:com/centit/**/dao/*.xml
+mybatis.map.xml.filematch = classpath*:com/centit/**/dao/*.xml
 #LDAP\u767B\u5F55\u914D\u7F6E
 ldap.url=ldap://192.168.128.5:389
 ldap.userName=accounts@centit.com
