--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -1,6 +1,6 @@
 #\u5E94\u7528\u7CFB\u7EDF\u4E3B\u76EE\u5F55
 app.home = D:/Projects/RunData/demo_home
-app.staticfile.home = /framework-system
+app.staticfile.home = /framework
 app.key = framework-mybatis
 #/framework-sys-view-easyui
 
