--- a/pom.xml
+++ b/pom.xml
@@ -12,23 +12,22 @@
         <centit.ui.version>3.0.1-SNAPSHOT</centit.ui.version>
         <servlet-api.version>3.1.0</servlet-api.version>
 
-        <spring.version>4.3.8.RELEASE</spring.version>
-        <spring.security.version>4.2.2.RELEASE</spring.security.version>
+        <spring.version>4.3.9.RELEASE</spring.version>
+        <spring.security.version>4.2.3.RELEASE</spring.security.version>
         <spring-security-oauth2.version>2.1.1.RELEASE</spring-security-oauth2.version>
         <spring.session.version>1.3.1.RELEASE</spring.session.version>
         <cas.client.version>3.4.1</cas.client.version>
         <ehcache.version>2.10.4</ehcache.version>
         <log4j.version>2.8.2</log4j.version>
-        <slf4j.version>1.7.7</slf4j.version>
+        <slf4j.version>1.7.9</slf4j.version>
         <commons-pool2.version>2.4.2</commons-pool2.version>
-        <commons-fileupload.version>1.3.1</commons-fileupload.version>
+        <commons-fileupload.version>1.3.3</commons-fileupload.version>
         <commons-io.version>2.5</commons-io.version>
         <commons-codec.version>1.10</commons-codec.version>
-        <h2.version>1.4.194</h2.version>
-        <redis.version>3.5.0.Final</redis.version>
+        <h2.version>1.4.196</h2.version>
+        <redis.version>4.3.3.Final</redis.version>
         <javax.validation.version>1.1.0.Final</javax.validation.version>
-        <javassist.version>3.19.0-GA</javassist.version>
-        <xml-apis.version>1.4.01</xml-apis.version>
+        <javassist.version>3.21.0-GA</javassist.version>
         <jstl.version>1.2</jstl.version>
 
         <hibernate.version>5.2.9.Final</hibernate.version>
@@ -202,7 +201,7 @@
             </plugin>
 
             <!-- GPG自动签名的插件 -->
-<!--
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
@@ -216,7 +215,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>-->
+            </plugin>
 
             <!-- sonatype release :
                 mvn nexus-staging:release -->
