--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -36,7 +36,8 @@ jdbc.driver=com.mysql.jdbc.Driver
 
 jdbc.user =framework
 jdbc.password =framework
-jdbc.url=jdbc:mysql://192.168.128.32:3306/frameworkdb?useUnicode=true&characterEncoding=utf-8
+#jdbc.url=jdbc:mysql://192.168.128.32:3306/frameworkdb?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://192.168.131.6:3306/framework?useUnicode=true&characterEncoding=utf-8
 
 #jdbc.user=USR_YW
 #jdbc.password=USR_YW
