--- a/framework-system-mybatis/src/main/resources/system.properties
+++ b/framework-system-mybatis/src/main/resources/system.properties
@@ -86,6 +86,6 @@ opt.subsystem=false
 sys.multi_lang=true
 sys.defalut_lang=zh_CN
 
-mybatis.map.xml.filematch=classpath:com/centit/framework/system/dao/*.xml
+mybatis.map.xml.filematch=classpath:com/centit/**/dao/*.xml
 
 sys.runas.systemmybatis=true
