更改mybat 的配置

--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -94,6 +94,6 @@ opt.subsystem=false
 sys.multi_lang=true
 sys.defalut_lang=zh_CN
 
-mybatis.map.xml.filematch=classpath:com/centit/framework/system/dao/*.xml
+mybatis.map.xml.filematch = classpath*:com/centit/framework/mybatis/dao/BaseMapper.xml,classpath*:com/centit/framework/system/dao/*.xml
 
 sys.runas.systemmybatis=true
