--- a/framework-mybatis/pom.xml
+++ b/framework-mybatis/pom.xml
@@ -93,4 +93,16 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
+
 </project>
