--- a/framework-core/pom.xml
+++ b/framework-core/pom.xml
@@ -36,7 +36,7 @@
 
         <dependency>
             <groupId>com.centit.support</groupId>
-            <artifactId>centit-compiler</artifactId>
+            <artifactId>centit-database</artifactId>
             <version>${centit.commons.version}</version>
         </dependency>
 
