--- a/framework-web-demo/pom.xml
+++ b/framework-web-demo/pom.xml
@@ -30,32 +30,16 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.version}</version>
-            <scope>runtime</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>ojdbc6</artifactId>
-            <version>${ojdbc6.version}</version>
-            <scope>runtime</scope>
-        </dependency>
 
         <dependency>
             <groupId>com.centit.framework</groupId>
-            <!--<artifactId>framework-base-view-easyui</artifactId>-->
-            <artifactId>framework-sys-view-easyui</artifactId>
+            <artifactId>framework-base-view-easyui</artifactId>
             <version>${centit.ui.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.centit.framework</groupId>
-            <!--<artifactId>framework-system-hibernate</artifactId>-->
-            <artifactId>framework-system-mybatis</artifactId>
-            <!--<artifactId>framework-system-static</artifactId>-->
+            <artifactId>framework-system-static</artifactId>
             <version>${centit.framework.version}</version>
         </dependency>
 
