修改配置文件bug

--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -93,7 +93,7 @@ sys.defalut_lang=zh_CN
 #\u9ED8\u8BA4false \u542F\u52A8staticsystem\u9879\u76EE\u65F6\u8BBE\u4E3Atrue
 sys.runas.staticsystem = true
 
-session.persistence.enable=false
+session.persistence.enable=true
 #session.persistence.db.type=redis
 session.persistence.db.type=h2
 
