修改默认不使用session持久化

--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -55,8 +55,8 @@ ldap.searchFilter=(sAMAccountName={0})
 ldap.userDnPatterns=sAMAccountName={0},CN=Users,DC=centit,DC=com
 #\u5355\u70B9\u767B\u5F55\u76F8\u5173\u914D\u7F6E\u4FE1\u606F
 cas.sso= false
-local.home = http://codefanpc:8080/framework
-cas.home = https://productsvr.centit.com:8443/cas
+local.home = http://localhost:8184/framework
+cas.home = https://zou_wy:8443/centit-cas
 #\u767B\u5F55\u6210\u529F\u540E\u7684\u9996\u9875
 local.firstpage = /system/mainframe/index
 centit.ip.enable = false
@@ -93,7 +93,7 @@ sys.defalut_lang=zh_CN
 #\u9ED8\u8BA4false \u542F\u52A8staticsystem\u9879\u76EE\u65F6\u8BBE\u4E3Atrue
 sys.runas.staticsystem = true
 
-session.persistence.enable=true
+session.persistence.enable=false
 #session.persistence.db.type=redis
 session.persistence.db.type=h2
 
