--- a/framework-core/pom.xml
+++ b/framework-core/pom.xml
@@ -35,9 +35,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.centit.support</groupId>
-            <artifactId>centit-database</artifactId>
-            <version>${centit.commons.version}</version>
+            <groupId>com.centit.framework</groupId>
+            <artifactId>centit-persistence-core</artifactId>
+            <version>${centit.persistence.version}</version>
         </dependency>
 
         <dependency>
@@ -197,13 +197,6 @@
         </dependency>
 
         <!-- 系统包中确实的依赖 -->
-        <!--<dependency> <groupId>commons-logging</groupId> <artifactId>commons-logging</artifactId>
-            <version>1.1.1</version> </dependency> -->
-        <!--<dependency>-->
-        <!--<groupId>org.jboss.logging</groupId>-->
-        <!--<artifactId>jboss-logging</artifactId>-->
-        <!--<version>3.3.0.Final</version>-->
-        <!--</dependency>-->
 
         <dependency>
             <groupId>org.slf4j</groupId>
