--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <jdk.version>1.8</jdk.version>
         <centit.commons.version>2.2.3-SNAPSHOT</centit.commons.version>
         <centit.ui.version>3.0.1-SNAPSHOT</centit.ui.version>
-        <servlet-api.version>3.1.0</servlet-api.version>
+        <centit.persistence.version>1.0-SNAPSHOT</centit.persistence.version>
 
         <spring.version>4.3.9.RELEASE</spring.version>
         <spring.security.version>4.2.3.RELEASE</spring.security.version>
@@ -24,24 +24,16 @@
         <commons-fileupload.version>1.3.3</commons-fileupload.version>
         <commons-io.version>2.5</commons-io.version>
         <commons-codec.version>1.10</commons-codec.version>
+
         <h2.version>1.4.196</h2.version>
         <redis.version>4.3.3.Final</redis.version>
+
         <javax.validation.version>1.1.0.Final</javax.validation.version>
         <javassist.version>3.21.0-GA</javassist.version>
         <jstl.version>1.2</jstl.version>
+        <servlet-api.version>3.1.0</servlet-api.version>
 
-        <hibernate.version>5.2.9.Final</hibernate.version>
-        <hibernate.validator.version>5.4.1.Final</hibernate.validator.version>
-        <flyway.version>4.2.0</flyway.version>
-
-        <persistence-api.version>1.0.2</persistence-api.version>
-        <mybatis.version>3.4.4</mybatis.version>
-        <mybatis.spring.version>1.3.1</mybatis.spring.version>
-        <flyway.version>4.2.0</flyway.version>
-
-        <ojdbc6.version>11.2.0.4</ojdbc6.version>
         <junit.version>4.12</junit.version>
-        <mysql.version>5.1.9</mysql.version>
     </properties>
 
     <groupId>com.centit.framework</groupId>
@@ -114,29 +106,26 @@
 
     <modules>
         <module>framework-adapter</module>
-        <module>framework-client</module>
         <module>framework-core</module>
-        <module>framework-mybatis</module>
-        <module>framework-hibernate</module>
         <module>framework-system-static</module>
     </modules>
 
 
     <!-- mvn deploy -DpomFile=pom.xml -->
 
-        <!--<distributionManagement>-->
-           <!--<repository>-->
-               <!--<id>ossrh</id>-->
-               <!--<name>sonatype-releases</name>-->
-               <!--<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>-->
-           <!--</repository>-->
-           <!--<snapshotRepository>-->
-               <!--<id>ossrh</id>-->
-               <!--<name>sonatype-snapshots</name>-->
-               <!--<url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
-           <!--</snapshotRepository>-->
-       <!--</distributionManagement>-->
-
+        <!--<distributionManagement>
+           <repository>
+               <id>ossrh</id>
+               <name>sonatype-releases</name>
+               <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+           </repository>
+           <snapshotRepository>
+               <id>ossrh</id>
+               <name>sonatype-snapshots</name>
+               <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+           </snapshotRepository>
+       </distributionManagement>
+-->
     <distributionManagement>
         <repository>
             <id>centit-releases</id>
@@ -182,51 +171,51 @@
                 </executions>
             </plugin>
 
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-javadoc-plugin</artifactId>-->
-                <!--<version>2.10.4</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>attach-javadocs</id>-->
-                        <!--<goals>-->
-                            <!--<goal>jar</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.4</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
             <!-- GPG自动签名的插件 -->
 
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-gpg-plugin</artifactId>-->
-                <!--<version>1.6</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>sign-artifacts</id>-->
-                        <!--<phase>verify</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>sign</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
             <!-- sonatype release :
                 mvn nexus-staging:release -->
 
-            <!--<plugin>-->
-                <!--<groupId>org.sonatype.plugins</groupId>-->
-                <!--<artifactId>nexus-staging-maven-plugin</artifactId>-->
-                <!--<version>1.6.8</version>-->
-                <!--<extensions>true</extensions>-->
-                <!--<configuration>-->
-                    <!--<serverId>ossrh</serverId>-->
-                    <!--<nexusUrl>https://oss.sonatype.org/</nexusUrl>-->
-                    <!--<autoReleaseAfterClose>true</autoReleaseAfterClose>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.8</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
 
         </plugins>
     </build>
