重构并将版本升级到4.0.1-SNAPSHOT， 主要变动有： 1,适应database包的重构 2,将持久和层独立出一个工程 3,删除了client包，其中的内容合并到adaptor包中， 4,hibernate、mybatis模块迁移到独立的模块中

--- a/framework-core/src/main/resources/system.properties
+++ b/framework-core/src/main/resources/system.properties
@@ -3,6 +3,8 @@ app.home = D:/Projects/RunData/demo_home
 app.staticfile.home = /framework-sys-view-easyui
 #\u8FD9\u4E2A\u76EE\u5F55\u5FC5\u987B\u662F /config \u4E0D\u80FD\u4FEE\u6539
 dir.config = /config
+#\u8FD9\u4E2A\u76EE\u5F55\u5FC5\u987B\u662F /sqlscript \u4E0D\u80FD\u4FEE\u6539
+dir.extenedSql = /sqlscript
 #\u65E5\u5FD7\u76EE\u5F55\uFF0C\u662F\u76F8\u5BF9\u4E8E\u5E94\u7528\u7CFB\u7EDF\u4E3B\u76EE\u5F55\u7684\uFF0C\u4E0B\u540C
 dir.log = /logs
 #\u4E0A\u4F20\u6587\u4EF6\u76EE\u5F55
