将Email的设置从数据字典 迁移到配置文件

--- a/framework-core/src/main/resources/system.properties
+++ b/framework-core/src/main/resources/system.properties
@@ -16,6 +16,13 @@ dir.index = /index
 #\u4E34\u65F6\u6587\u4EF6\u76EE\u5F55
 dir.temp = /temp
 
+#email 通知需要设置的参数
+message.sender.email.hostName = email.centit.com
+message.sender.email.smtpPort = 25
+message.sender.email.userName = accounts
+message.sender.email.userPassword = yhs@yhs1\
+message.sender.email.serverEmail = noreplay@centit.com
+
 #session \u6301\u4E45\u5316
 session.persistence.enable=true
 # \u5982\u679C\u662F\u5355\u8282\u70B9\u4E3A\u4E86\u91CD\u542F\u6062\u590Dsession h2
