--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <centit.framework.version>4.0.1</centit.framework.version>
+        <centit.framework.version>4.0.2-SNAPSHOT</centit.framework.version>
         <jdk.version>1.8</jdk.version>
-        <centit.commons.version>2.2.4</centit.commons.version>
-        <centit.ui.version>3.0.1</centit.ui.version>
-        <centit.persistence.version>1.0</centit.persistence.version>
+        <centit.commons.version>2.2.5-SNAPSHOT</centit.commons.version>
+        <centit.ui.version>3.0.1-SNAPSHOT</centit.ui.version>
+        <centit.persistence.version>1.0.1-SNAPSHOT</centit.persistence.version>
 
         <spring.version>4.3.9.RELEASE</spring.version>
         <spring.security.version>4.2.3.RELEASE</spring.security.version>
@@ -39,7 +39,7 @@
     <groupId>com.centit.framework</groupId>
     <artifactId>framework-parent</artifactId>
     <packaging>pom</packaging>
-    <version>4.0.1</version>
+    <version>4.0.2-SNAPSHOT</version>
     <name>com.centit.framework:framework-parent</name>
     <description>基于spring mvc的内部开发框架.
         包括了对 spring mvc, spring security, spring session, hibernate, mybatis, flyway 等等开源框架的整合；
@@ -125,23 +125,11 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
         </repository>
         <snapshotRepository>
-            <id>ossrh</id>
-            <name>sonatype-snapshots</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
-    <!--<distributionManagement>
-        <repository>
-            <id>centit-releases</id>
-            <name>centit-release</name>
-            <url>http://develop.centit.com:8080/nexus/content/repositories/centit-releases/</url>
-        </repository>
-        <snapshotRepository>
             <id>centit-snapshots</id>
             <name>centit-snapshots</name>
             <url>http://develop.centit.com:8080/nexus/content/repositories/centit-snapshots/</url>
         </snapshotRepository>
-    </distributionManagement>-->
+    </distributionManagement>
 
     <build>
         <plugins>
