--- a/pom.xml
+++ b/pom.xml
@@ -171,7 +171,7 @@
                 </executions>
             </plugin>
 
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.4</version>
@@ -185,7 +185,7 @@
                 </executions>
             </plugin>
 
-            <!-- GPG自动签名的插件 -->
+            &lt;!&ndash; GPG自动签名的插件 &ndash;&gt;
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -202,8 +202,8 @@
                 </executions>
             </plugin>
 
-            <!-- sonatype release :
-                mvn nexus-staging:release -->
+            &lt;!&ndash; sonatype release :
+                mvn nexus-staging:release &ndash;&gt;
 
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
@@ -215,7 +215,7 @@
                     <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
-            </plugin>
+            </plugin>-->
 
         </plugins>
     </build>
