重构配置文件

--- a/framework-core/src/main/resources/system.properties
+++ b/framework-core/src/main/resources/system.properties
@@ -16,7 +16,37 @@ dir.index = /index
 #\u4E34\u65F6\u6587\u4EF6\u76EE\u5F55
 dir.temp = /temp
 
-#email 通知需要设置的参数
+#spring security \u767B\u9646\u8BBE\u7F6E
+http.csrf.enable = false
+# Indicates if the filter chain should be continued prior to delegation to
+# which may be useful in certain environment (such as Tapestry applications).
+http.filter.chain.continueBeforeSuccessfulAuthentication - false
+#\u767B\u5F55\u76F8\u5173\u8BBE\u7F6E\uFF0C \u8FD9\u4E9B\u8BBE\u7F6E\u53EA\u5728Dao\u767B\u9646\u65B9\u5F0F\u662F\u6709\u6548\uFF0Ccas\u767B\u9646\u65B9\u5F0F\u662F\uFF0C\u767B\u9646\u5F62\u5F0F\u6709cas\u51B3\u5B9A
+#default false
+login.failure.writeLog =
+#default /system/mainframe/login/error
+login.failure.targetUrl =
+#default true
+login.success.writeLog =
+#default false
+login.success.registToken =
+#default /
+login.success.targetUrl =
+#\u9A8C\u8BC1\u7801\u9A8C\u8BC1\u65F6\u673A  0 \u4E0D\u9A8C\u8BC1, 1 \u767B\u9646\u5931\u8D25\u540E \u518D\u6B21\u767B\u9646\u9A8C\u8BC1, 2 \u59CB\u7EC8\u9A8C\u8BC1 default 0
+login.captcha.checkTime =
+#\u9A8C\u8BC1\u7801\u9A8C\u8BC1\u65B9\u5F0F   1 \u4E00\u8D77\u9A8C\u8BC1 \u548C\u767B\u9646\u8868\u5355\u4E00\u8D77\u63D0\u4EA4, 2 ajax \u9A8C\u8BC1\uFF0C\u63D0\u4EA4\u767B\u9646\u8868\u8FBE\u4E4B\u524D\u9700\u9A8C\u8BC1\u901A\u8FC7  default 0
+login.captcha.checkType =
+#\u767B\u9646\u91CD\u8BD5\u68C0\u67E5\u7C7B\u522B\uFF0C\u6839\u636EIP\u68C0\u67E5 (host/ip/h/hostip) \u8FD8\u662F\u6839\u636E\u7528\u6237\u767B\u9646\u660E\u68C0\u67E5 \uFF08user/loginname/L\uFF09 default L
+login.retry.checkType =
+#\u8BBE\u7F6E\u6700\u591A\u91CD\u8BD5\u6B21\u6570\uFF0C\u8D85\u8FC7\u8FD9\u4E2A\u6B21\u6570\u5C31\u4F1A\u9501\u5B9A\uFF0C
+login.retry.maxTryTimes =
+#\u9501\u5B9A\u65F6\u95F4 \u5355\u4F4D\u4E3A\u5206\u949F\u3002default 10
+login.retry.lockMinites =
+#\u91CD\u8BD5\u95F4\u9694\u65F6\u95F4\uFF0C\u5355\u4F4D\u4E3A\u5206\u949F\uFF0C\u8D85\u8FC7\u8FD9\u4E2A\u65F6\u95F4\u91CD\u8BD5\u6B21\u6570\u6E050\uFF0C default 3
+login.retry.checkTimeTnterval =
+
+
+#email \u90AE\u7BB1\u8BBE\u7F6E
 message.sender.email.hostName = email.centit.com
 message.sender.email.smtpPort = 25
 message.sender.email.userName = accounts
