--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -1,5 +1,5 @@
 #\u5E94\u7528\u7CFB\u7EDF\u4E3B\u76EE\u5F55
-app.home = /D/Projects/RunData/demo_home
+app.home = D:/Projects/RunData/demo_home
 app.staticfile.home = /framework
 app.key = framework-static
 #\u8FD9\u4E2A\u76EE\u5F55\u5FC5\u987B\u662F /config \u4E0D\u80FD\u4FEE\u6539
