重构配置文件

--- a/framework-core/src/main/resources/system.properties
+++ b/framework-core/src/main/resources/system.properties
@@ -20,7 +20,10 @@ dir.temp = /temp
 http.csrf.enable = false
 # Indicates if the filter chain should be continued prior to delegation to
 # which may be useful in certain environment (such as Tapestry applications).
-http.filter.chain.continueBeforeSuccessfulAuthentication - false
+http.filter.chain.continueBeforeSuccessfulAuthentication = false
+#\u8BBE\u7F6E\u6240\u6709\u7684\u8D44\u6E90\u90FD\u8981\u88AB\u5BA1\u6838\uFF0C\u9ED8\u8BA4\u4E3Afalse\uFF0C\u5982\u679C\u662Ffalse\u5C31\u662F\u6CA1\u6709\u8D4B\u7ED9\u4EFB\u4F55\u89D2\u8272\u7684\u64CD\u4F5C\u5C31\u4F1A\u88AB\u8BA4\u4E3A\u662F\u4E0D\u9700\u8981\u5BA1\u6838\u7684\uFF0C\u4F1A\u81EA\u52A8\u653E\u884C
+http.security.allResourceMustBeAudited =
+
 #\u767B\u5F55\u76F8\u5173\u8BBE\u7F6E\uFF0C \u8FD9\u4E9B\u8BBE\u7F6E\u53EA\u5728Dao\u767B\u9646\u65B9\u5F0F\u662F\u6709\u6548\uFF0Ccas\u767B\u9646\u65B9\u5F0F\u662F\uFF0C\u767B\u9646\u5F62\u5F0F\u6709cas\u51B3\u5B9A
 #default false
 login.failure.writeLog =
