--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <centit.commons.version>2.2.5-SNAPSHOT</centit.commons.version>
         <centit.ui.version>3.0.1-SNAPSHOT</centit.ui.version>
         <centit.persistence.version>1.0.2-SNAPSHOT</centit.persistence.version>
+        <centit.msgpusher.version>0.0.4-SNAPSHOT</centit.msgpusher.version>
 
         <spring.version>4.3.12.RELEASE</spring.version>
         <spring.security.version>4.2.3.RELEASE</spring.security.version>
