--- a/framework-core/pom.xml
+++ b/framework-core/pom.xml
@@ -93,12 +93,11 @@
             <!--<version>2.0.0.CR1</version>-->
         </dependency>
         <!-- Spring family -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
             <version>${spring-security-oauth2.version}</version>
-        </dependency>
-
+        </dependency>-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
