--- a/framework-web-demo/pom.xml
+++ b/framework-web-demo/pom.xml
@@ -23,10 +23,12 @@
         <centit.framework.version>4.0.4-SNAPSHOT</centit.framework.version>
         <centit.commons.version>2.2.5-SNAPSHOT</centit.commons.version>
         <centit.ui.version>3.0.1-SNAPSHOT</centit.ui.version>
+        <websocket-api.version>1.1</websocket-api.version>
         <ojdbc6.version>11.2.0.4</ojdbc6.version>
         <junit.version>4.12</junit.version>
         <mysql.version>5.1.9</mysql.version>
         <servlet-api.version>3.1.0</servlet-api.version>
+        <persistence-api.version>2.2</persistence-api.version>
     </properties>
 
     <dependencies>
@@ -43,6 +45,11 @@
             <version>${centit.framework.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>${persistence-api.version}</version>
+        </dependency>
         <!-- server runtime library -->
         <dependency>
             <groupId>com.sun</groupId>
