--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <cas.client.version>3.4.1</cas.client.version>
         <ehcache.version>2.10.4</ehcache.version>
         <log4j.version>2.9.1</log4j.version>
+        <javafaker.version>0.14</javafaker.version>
 
         <commons-pool2.version>2.4.2</commons-pool2.version>
         <commons-fileupload.version>1.3.3</commons-fileupload.version>
