--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <centit.framework.version>4.0.4-SNAPSHOT</centit.framework.version>
+        <centit.framework.version>4.0-SNAPSHOT</centit.framework.version>
         <jdk.version>1.8</jdk.version>
-        <centit.commons.version>2.2.5-SNAPSHOT</centit.commons.version>
-        <centit.ui.version>3.0.1-SNAPSHOT</centit.ui.version>
-        <centit.persistence.version>1.0.2-SNAPSHOT</centit.persistence.version>
-        <centit.msgpusher.version>0.0.4-SNAPSHOT</centit.msgpusher.version>
+        <centit.commons.version>2.2.5</centit.commons.version>
+        <centit.ui.version>3.1.0</centit.ui.version>
+        <centit.persistence.version>1.0.2</centit.persistence.version>
+        <centit.msgpusher.version>0.0.4</centit.msgpusher.version>
 
         <spring.version>4.3.12.RELEASE</spring.version>
         <spring.security.version>4.2.3.RELEASE</spring.security.version>
@@ -42,7 +42,7 @@
     <groupId>com.centit.framework</groupId>
     <artifactId>framework-parent</artifactId>
     <packaging>pom</packaging>
-    <version>4.0.4-SNAPSHOT</version>
+    <version>4.0-SNAPSHOT</version>
     <name>com.centit.framework:framework-parent</name>
     <description>基于spring mvc的内部开发框架.
         包括了对 spring mvc, spring security, spring session, hibernate, mybatis, flyway 等等开源框架的整合；
@@ -174,7 +174,7 @@
                 </executions>
             </plugin>
 
-            <!--<plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.4</version>
@@ -188,7 +188,7 @@
                 </executions>
             </plugin>
 
-            &lt;!&ndash; GPG自动签名的插件 &ndash;&gt;
+            <!-- GPG自动签名的插件 -->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -205,8 +205,8 @@
                 </executions>
             </plugin>
 
-            &lt;!&ndash; sonatype release :
-                mvn nexus-staging:release &ndash;&gt;
+            <!-- sonatype release :
+                mvn nexus-staging:release -->
 
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
@@ -218,7 +218,7 @@
                     <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
-            </plugin>-->
+            </plugin>
 
         </plugins>
     </build>
