--- a/framework-web-demo/pom.xml
+++ b/framework-web-demo/pom.xml
@@ -20,9 +20,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <jdk.version>1.8</jdk.version>
-        <centit.framework.version>4.0.4-SNAPSHOT</centit.framework.version>
-        <centit.commons.version>2.2.5-SNAPSHOT</centit.commons.version>
-        <centit.ui.version>3.0.1-SNAPSHOT</centit.ui.version>
+        <centit.framework.version>4.0.4</centit.framework.version>
+        <centit.commons.version>2.2.5</centit.commons.version>
+        <centit.ui.version>3.1.0</centit.ui.version>
         <websocket-api.version>1.1</websocket-api.version>
         <ojdbc6.version>11.2.0.4</ojdbc6.version>
         <junit.version>4.12</junit.version>
