重构代码，将spring的web配置类 和 security相关的配置类 从core中分离出来 以便于迁移到spring boot

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,9 @@
         <module>framework-adapter</module>
         <module>framework-core</module>
         <module>framework-system-static</module>
+        <module>framework-config</module>
+        <module>framework-filter</module>
+        <module>framework-security</module>
     </modules>
 
 
