--- a/framework-web-demo/pom.xml
+++ b/framework-web-demo/pom.xml
@@ -20,7 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <jdk.version>1.8</jdk.version>
-        <centit.framework.version>4.0.4</centit.framework.version>
+        <centit.framework.version>4.0-SNAPSHOT</centit.framework.version>
         <centit.commons.version>2.2.5</centit.commons.version>
         <centit.ui.version>3.1.0</centit.ui.version>
         <websocket-api.version>1.1</websocket-api.version>
@@ -39,6 +39,18 @@
             <groupId>com.centit.framework</groupId>
             <artifactId>framework-base-view-easyui</artifactId>
             <version>${centit.ui.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.centit.framework</groupId>
+            <artifactId>framework-config</artifactId>
+            <version>${centit.framework.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.centit.framework</groupId>
+            <artifactId>framework-security</artifactId>
+            <version>${centit.framework.version}</version>
         </dependency>
 
         <dependency>
