重构代码，将spring的web配置类 和 security相关的配置类 从core中分离出来 以便于迁移到spring boot

--- a/framework-web-demo/pom.xml
+++ b/framework-web-demo/pom.xml
@@ -47,11 +47,11 @@
             <version>${centit.framework.version}</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.centit.framework</groupId>
             <artifactId>framework-security</artifactId>
             <version>${centit.framework.version}</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>com.centit.framework</groupId>
