--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -3,18 +3,17 @@ app.home = D:/Projects/RunData/demo_home
 app.staticfile.home = /framework
 app.key = framework-static
 #\u8FD9\u4E2A\u76EE\u5F55\u5FC5\u987B\u662F /config \u4E0D\u80FD\u4FEE\u6539
-dir.config = /config
+#dir.config = /config
 #\u65E5\u5FD7\u76EE\u5F55\uFF0C\u662F\u76F8\u5BF9\u4E8E\u5E94\u7528\u7CFB\u7EDF\u4E3B\u76EE\u5F55\u7684\uFF0C\u4E0B\u540C
-dir.log = /logs
+#dir.log = /logs
 #\u4E0A\u4F20\u6587\u4EF6\u76EE\u5F55
-dir.upload = /upload
+#dir.upload = /upload
 #\u516C\u5171\u6587\u4EF6\u76EE\u5F55
-
-dir.publicfile = /publicfile
+#dir.publicfile = /publicfile
 #\u5168\u6587\u68C0\u7D22\u7D22\u5F15\u76EE\u5F55
-dir.index = /index
+#dir.index = /index
 #\u4E34\u65F6\u6587\u4EF6\u76EE\u5F55
-dir.temp = /temp
+#dir.temp = /temp
 
 #\u6570\u636E\u5E93\u8FDE\u63A5\u53C2\u6570\u914D\u7F6E\uFF0C\u540E\u7EED\u7684\u7248\u672C\u4F1A\u628A\u8FD9\u4E2A\u66FF\u6362\u4E3Ajdni\u90A3\u6837\u66F4\u7075\u6D3B\u66F4\u5B89\u5168\uFF0C
 #\u56E0\u4E3A\u4E0D\u8981\u63D0\u4F9B\u5BC6\u7801\uFF0C\u5355\u5143\u914D\u7F6E\u6587\u4EF6\u4E2D\u4E5F\u53EF\u4EE5\u5BF9\u5BC6\u7801\u8FDB\u884C\u52A0\u5BC6\uFF0C\u6682\u65F6\u6CA1\u6709\u505A
