--- a/framework-web-demo/pom.xml
+++ b/framework-web-demo/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <groupId>com.centit.framework</groupId>
-    <version>4.0-SNAPSHOT</version>
+    <version>4.1.1803</version>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>framework-web-demo</artifactId>
@@ -20,8 +20,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <jdk.version>1.8</jdk.version>
-        <centit.framework.version>4.1-SNAPSHOT</centit.framework.version>
-        <centit.commons.version>2.2.5</centit.commons.version>
+        <centit.framework.version>4.1.1803</centit.framework.version>
+        <centit.commons.version>2.2.1803</centit.commons.version>
+
         <centit.ui.version>3.1.0</centit.ui.version>
         <websocket-api.version>1.1</websocket-api.version>
         <ojdbc6.version>11.2.0.4</ojdbc6.version>
@@ -39,6 +40,12 @@
             <groupId>com.centit.framework</groupId>
             <artifactId>framework-base-view-easyui</artifactId>
             <version>${centit.ui.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.centit.framework</groupId>
+            <artifactId>framework-core-web</artifactId>
+            <version>${centit.framework.version}</version>
         </dependency>
 
         <dependency>
