--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,15 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <centit.framework.version>4.1-SNAPSHOT</centit.framework.version>
+        <centit.framework.version>4.1.1803</centit.framework.version>
         <jdk.version>1.8</jdk.version>
-        <centit.commons.version>2.2.5</centit.commons.version>
+        <centit.commons.version>2.2.1803</centit.commons.version>
         <centit.ui.version>3.1.0</centit.ui.version>
-        <centit.persistence.version>1.0.2</centit.persistence.version>
-        <centit.msgpusher.version>0.0.4</centit.msgpusher.version>
+        <centit.persistence.version>1.1.1803</centit.persistence.version>
+        <centit.msgpusher.version>0.1.1803</centit.msgpusher.version>
 
-        <spring.version>4.3.12.RELEASE</spring.version>
-        <spring.security.version>4.2.3.RELEASE</spring.security.version>
+        <spring.version>4.3.14.RELEASE</spring.version>
+        <spring.security.version>4.2.4.RELEASE</spring.security.version>
         <spring-security-oauth2.version>2.2.0.RELEASE</spring-security-oauth2.version>
         <spring.session.version>1.3.2.RELEASE</spring.session.version>
         <cas.client.version>3.4.1</cas.client.version>
@@ -22,7 +22,7 @@
         <log4j.version>2.9.1</log4j.version>
         <javafaker.version>0.14</javafaker.version>
 
-        <commons-pool2.version>2.4.2</commons-pool2.version>
+        <commons-pool2.version>2.4.3</commons-pool2.version>
         <commons-fileupload.version>1.3.3</commons-fileupload.version>
         <commons-io.version>2.5</commons-io.version>
         <commons-codec.version>1.10</commons-codec.version>
@@ -42,7 +42,7 @@
     <groupId>com.centit.framework</groupId>
     <artifactId>framework-parent</artifactId>
     <packaging>pom</packaging>
-    <version>4.1-SNAPSHOT</version>
+    <version>4.1.1803</version>
     <name>com.centit.framework:framework-parent</name>
     <description>基于spring mvc的内部开发框架.
         包括了对 spring mvc, spring security, spring session, hibernate, mybatis, flyway 等等开源框架的整合；
@@ -119,16 +119,22 @@
         <module>framework-filter</module>
         <module>framework-security</module>
         <module>framework-system-static</module>
+        <module>framework-core-web</module>
     </modules>
 
 
     <!-- mvn deploy -DpomFile=pom.xml -->
 
     <distributionManagement>
-        <repository>
+        <!--<repository>
             <id>ossrh</id>
             <name>sonatype-releases</name>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>-->
+        <repository>
+            <id>centit-releases</id>
+            <name>centit-release</name>
+            <url>http://nexus.centit.com:8081/nexus/content/repositories/centit-releases/</url>
         </repository>
         <snapshotRepository>
             <id>centit-snapshots</id>
@@ -193,7 +199,7 @@
 
             <!-- GPG自动签名的插件 -->
 
-            <plugin>
+           <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.6</version>
@@ -208,8 +214,8 @@
                 </executions>
             </plugin>
 
-            <!-- sonatype release :
-                mvn nexus-staging:release -->
+            &lt;!&ndash; sonatype release :
+                mvn nexus-staging:release &ndash;&gt;
 
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
@@ -222,7 +228,7 @@
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
             </plugin>
-
+-->
         </plugins>
     </build>
 </project>
