--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
         <module>framework-security</module>
         <module>framework-system-static</module>
         <module>framework-core-web</module>
+        <module>framework-system-static-config</module>
     </modules>
 
 
