--- a/framework-system-static-config/pom.xml
+++ b/framework-system-static-config/pom.xml
@@ -9,17 +9,28 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>framework-system-static</artifactId>
-    <name>com.centit.framework:framework-system-static</name>
+    <artifactId>framework-system-static-config</artifactId>
+    <name>com.centit.framework:framework-system-static-config</name>
     <packaging>jar</packaging>
-    <description>用json实现了和core兼容的表结构，另外也可以用jdbc直接读取其他框架系统兼容的表结构，
-        同时提供了一个和基于框架开发的集成平台对接的接口</description>
+    <description>配置信息</description>
 
     <dependencies>
         <dependency>
             <groupId>com.centit.framework</groupId>
-            <artifactId>framework-core</artifactId>
+            <artifactId>framework-system-static</artifactId>
             <version>${centit.framework.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.centit.support</groupId>
+            <artifactId>centit-database</artifactId>
+            <version>${centit.commons.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>${ehcache.version}</version>
         </dependency>
 
         <!-- test library -->
@@ -30,15 +41,6 @@
             <version>${junit.version}</version>
         </dependency>
 
-        <!-- server runtime library -->
-        <dependency>
-            <groupId>com.sun</groupId>
-            <artifactId>tools</artifactId>
-            <version>${jdk.version}</version>
-            <systemPath>${env.JAVA_HOME}/lib/tools.jar</systemPath>
-            <scope>system</scope>
-        </dependency>
-
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
@@ -47,4 +49,5 @@
         </dependency>
 
     </dependencies>
+
 </project>
