修改bug, 修复userDetail转换为json的缺陷

--- a/pom.xml
+++ b/pom.xml
@@ -128,16 +128,16 @@
     <!-- mvn deploy -DpomFile=pom.xml -->
 
     <distributionManagement>
-        <!--<repository>
+        <repository>
             <id>ossrh</id>
             <name>sonatype-releases</name>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-        </repository>-->
-        <repository>
+        </repository>
+        <!--<repository>
             <id>centit-releases</id>
             <name>centit-release</name>
             <url>http://nexus.centit.com:8081/nexus/content/repositories/centit-releases/</url>
-        </repository>
+        </repository>-->
         <snapshotRepository>
             <id>centit-snapshots</id>
             <name>centit-snapshots</name>
@@ -201,7 +201,7 @@
 
             <!-- GPG自动签名的插件 -->
 
-           <!-- <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.6</version>
@@ -216,8 +216,8 @@
                 </executions>
             </plugin>
 
-            &lt;!&ndash; sonatype release :
-                mvn nexus-staging:release &ndash;&gt;
+            <!-- sonatype release :
+                mvn nexus-staging:release -->
 
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
@@ -230,7 +230,6 @@
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
             </plugin>
--->
         </plugins>
     </build>
 </project>
