--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,12 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <centit.framework.version>4.1.1803</centit.framework.version>
+        <centit.framework.version>4.1-SNAPSHOT</centit.framework.version>
+        <centit.persistence.version>1.1-SNAPSHOT</centit.persistence.version>
         <jdk.version>1.8</jdk.version>
-        <centit.commons.version>2.2.1803</centit.commons.version>
+        <centit.commons.version>2.2.1804</centit.commons.version>
         <centit.ui.version>3.1.0</centit.ui.version>
-        <centit.persistence.version>1.1.1803</centit.persistence.version>
+
         <centit.msgpusher.version>0.1.1803</centit.msgpusher.version>
 
         <spring.version>4.3.14.RELEASE</spring.version>
@@ -42,7 +43,7 @@
     <groupId>com.centit.framework</groupId>
     <artifactId>framework-parent</artifactId>
     <packaging>pom</packaging>
-    <version>4.1.1803</version>
+    <version>4.1-SNAPSHOT</version>
     <name>com.centit.framework:framework-parent</name>
     <description>基于spring mvc的内部开发框架.
         包括了对 spring mvc, spring security, spring session, hibernate, mybatis, flyway 等等开源框架的整合；
