添加 认证策略 access.resource.notallowed.anonymous

--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -133,3 +133,6 @@ session.persistence.db.type=h2
 session.h2.file = D:/Projects/RunData/demo_home/config/db
 session.redis.host=127.0.0.1
 session.redis.port=6379
+
+access.resource.must.be.audited = false
+access.resource.notallowed.anonymous = false
