修改参数名称

--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -1,19 +1,13 @@
 #\u5E94\u7528\u7CFB\u7EDF\u4E3B\u76EE\u5F55
-app.home = D:/Projects/RunData/demo_home
-app.staticfile.home = /framework
 app.key = framework-static
-#\u8FD9\u4E2A\u76EE\u5F55\u5FC5\u987B\u662F /config \u4E0D\u80FD\u4FEE\u6539
-#dir.config = /config
-#\u65E5\u5FD7\u76EE\u5F55\uFF0C\u662F\u76F8\u5BF9\u4E8E\u5E94\u7528\u7CFB\u7EDF\u4E3B\u76EE\u5F55\u7684\uFF0C\u4E0B\u540C
-#dir.log = /logs
-#\u4E0A\u4F20\u6587\u4EF6\u76EE\u5F55
-#dir.upload = /upload
-#\u516C\u5171\u6587\u4EF6\u76EE\u5F55
-#dir.publicfile = /publicfile
-#\u5168\u6587\u68C0\u7D22\u7D22\u5F15\u76EE\u5F55
-#dir.index = /index
-#\u4E34\u65F6\u6587\u4EF6\u76EE\u5F55
-#dir.temp = /temp
+app.name = \u6846\u67B6demo
+app.home = /D/Projects/RunData/demo_home
+app.subsystem = false
+app.staticfile.home = /framework
+aap.local.firstpage = /system/mainframe/index
+#\u591A\u56FD\u8BED\u8A00\u8BBE\u7F6E
+aap.local.multiLang= false
+aap.local.defalutLang=zh_CN
 
 #\u6570\u636E\u5E93\u8FDE\u63A5\u53C2\u6570\u914D\u7F6E\uFF0C\u540E\u7EED\u7684\u7248\u672C\u4F1A\u628A\u8FD9\u4E2A\u66FF\u6362\u4E3Ajdni\u90A3\u6837\u66F4\u7075\u6D3B\u66F4\u5B89\u5168\uFF0C
 #\u56E0\u4E3A\u4E0D\u8981\u63D0\u4F9B\u5BC6\u7801\uFF0C\u5355\u5143\u914D\u7F6E\u6587\u4EF6\u4E2D\u4E5F\u53EF\u4EE5\u5BF9\u5BC6\u7801\u8FDB\u884C\u52A0\u5BC6\uFF0C\u6682\u65F6\u6CA1\u6709\u505A
@@ -87,11 +81,13 @@ ldap.searchBase=CN=Users,DC=centit,DC=com
 ldap.searchFilter=(sAMAccountName={0})
 ldap.userDnPatterns=sAMAccountName={0},CN=Users,DC=centit,DC=com
 #\u5355\u70B9\u767B\u5F55\u76F8\u5173\u914D\u7F6E\u4FE1\u606F
-cas.sso= false
-local.home = http://localhost:8184/framework
-cas.home = https://zou_wy:8443/centit-cas
+login.dao.enable= true
+login.cas.enable= false
+login.cas.localHome = http://localhost:8184/framework
+login.cas.casHome = https://zou_wy:8443/centit-cas
 #\u767B\u5F55\u6210\u529F\u540E\u7684\u9996\u9875
-local.firstpage = /system/mainframe/index
+
+
 centit.ip.enable = false
 centit.ip.home = http://productsvr.centit.com:8880/centit-ip/service/platform
 centit.ip.topoptid=METAFORM
@@ -119,9 +115,7 @@ socketio.port = 9137
 opt.name= \u6846\u67B6\u6D4B\u8BD5\u9879\u76EE
 opt.subsystem=false
 
-#\u591A\u56FD\u8BED\u8A00\u8BBE\u7F6E
-sys.multi_lang=true
-sys.defalut_lang=zh_CN
+
 
 #\u9ED8\u8BA4false \u542F\u52A8staticsystem\u9879\u76EE\u65F6\u8BBE\u4E3Atrue
 sys.runas.staticsystem = true
